examples/wgsl/tests/data/missing_arrow.wgsl
fn foo() i32 {
  let x = 42;
}

fn bar() S<T, i32> {
  foo();
}
